# CardValidator

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
.devcontainer/: devcontainer.json  docker-compose.yml
src/cardvalidator/: __init__.py  validator.py
tests/: test_validator.py
