[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cardvalidator-lite"
version = "0.1.1"
description = "A Python library for credit card validation using the Luhn algorithm"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vishva R", email = "murthyvishva@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["credit card", "validation", "luhn", "payment", "rupay"]

[project.urls]
Homepage = "https://github.com/vishvaRam/CardValidator.git"
Repository = "https://github.com/vishvaRam/CardValidator.git"
Issues = "https://github.com/vishvaRam/CardValidator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cardvalidator"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
